--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ colorama==0.4.5
 Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
+Flask-JWT-Extended == 4.4.4
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
